--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at 10% 20%, rgb(87, 151, 214) 14.2%, rgb(165, 109, 180) 89.5%);
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: #3b3838;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+li:first-letter {
+  text-transform: capitalize;
+}
+
+.WeatherInfo h2 {
+  font-size: 40px;
+  color: #ffffff;
+}
+
+.FormatDate {
+  margin-top: -28px;
+}
+
+.FormatDate p {
+ font-size: 16px;
+ opacity: 0.6;
+}
+
+footer {
+  color: black;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration: none;
+  line-height: 30px;
+  font-size: small;
 }
