--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,14 +1,14 @@
 .Weather {
-  max-width: 500px;
-  margin: 0 auto;
+  padding: 2em;
+  border-radius: 60px;
+  max-width: 460px;
   margin-top: 50px;
+  margin: 0 auto;
   background: radial-gradient(
     circle at 10% 20%,
     rgb(6, 123, 239) 14.2%,
     rgb(219, 115, 249) 89.5%
   );
-  padding: 35px;
-  border-radius: 60px;
 }
 
 .weather-temperature {
