--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,6 +4,7 @@
   max-width: 460px;
   margin-top: 50px;
   margin: 0 auto;
+  width: 100%;
   background: radial-gradient(
     circle at 10% 20%,
     rgb(6, 123, 239) 14.2%,
