--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,8 +1,7 @@
 .Weather {
-  padding: 2em;
+  padding: 35px;
   border-radius: 50px;
   max-width: 430px;
-  margin-top: 50px;
   margin: 0 auto;
   background: radial-gradient(
     circle at 10% 20%,
@@ -13,7 +12,7 @@
 
 .weather-temperature {
   color: #ffffff;
-  font-size: 75px;
+  font-size: 65px;
   line-height: 1;
 }
 
@@ -24,7 +23,8 @@
 }
 
 .form-control {
-  border: 1px solid white;
+  display: inline-block;
+  border: none;
   border-radius: 20px;
   box-shadow: 1px 4px 16px rgb(234 201 238 / 25%);
   padding: 12px 20px;
@@ -34,8 +34,8 @@
 
 .btn-primary {
   color: white;
-  border: 1px solid transparent;
-  background: #4d36b46c;
+  border: none;
+  background: #4227b96b;
   border-radius: 20px;
   box-shadow: 1px 4px 16px rgb(234 201 238 / 25%);
   padding: 12px 20px;
